--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                tools:text="SQUATS"
+                android:text="UNKNOWN"
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 android:fontFamily="@font/montserrat_bold"
@@ -64,7 +64,6 @@
 
         <TextView
             android:id="@+id/tvFps"
-            android:text="drek"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
